--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "3000:3000"
     environment:
       JWT_SECRET: "f371b29fb07b78c99c7df3a5ae5f90b7e8a7dbe48c2c022bfd09e34a367dd3776ae8b082809b224c04398bcb10c63a30e181d1ddbb1ec348affbb8f5a0d79842"
-      DB_HOST: 192.168.100.60
+      DB_HOST: db
       DB_USER: root
       DB_PASS: 
       DB_NAME: inter
